node/overseer/all-subsystems-gen/tests/ui/err-01-enum.stderr
error: expected `struct`
 --> $DIR/err-01-enum.rs:6:1
  |
6 | enum AllSubsystems<A,B> {
  | ^^^^
